# commspt-nonebot-plugin

./: LICENSE  README.md  pyproject.toml
commspt_nonebot_plugin/: __init__.py  __main__.py  config.py  data_source.py  model.py  models.py  util.py
commspt_nonebot_plugin/templates/: user-info.html.jinja
