[project]
name = "commspt-nonebot-plugin"
dynamic = ["version"]
description = "For LittleSkin Commspt."
authors = [{ name = "FalfaChino", email = "falfa@chiyoda.moe" }]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.40.1",
    "httpx>=0.24",
    "nonebot-plugin-htmlrender>=0.2.2",
    "jinja2>=3.1.2",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/FalfaChino/commspt-nonebot-plugin"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "commspt_nonebot_plugin/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
