[project]
name = "commspt-nonebot-plugin"
dynamic = ["version"]
description = "For LittleSkin Commspt."
authors = [{ name = "FalfaChino", email = "falfa@chiyoda.moe" }]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.43.0",
    "httpx>=0.24",
    "jinja2>=3.1.2",
    "yggdrasil-mc>=0.2.3",
    "arrow>=1.3.0",
    "email-validator>=2.1.1",
    "pytz>=2024.1",
    "pillow>=10.3.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/LittleSkinCommspt/commspt-nonebot-plugin"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "commspt_nonebot_plugin/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
